# survey-generator

./: .env.prod.example  .gitignore  DEPLOY.md  DOCS.md  README.md  TASK.md  docker-compose.yml
.github/workflows/: deploy.yml
survey/: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  pyproject.toml  requirements.txt
survey generator/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
survey generator/src/: App.css  App.tsx
survey generator/src/components/: AddQuestionChoice.tsx  GenerateChatbotModal.tsx  Header.tsx  QuestionCard.tsx  QuestionForm.tsx  QuestionLibrary.tsx  QuestionList.tsx
survey generator/src/data/: questionBank.ts
survey generator/src/types/: models.ts
survey-employee/: .env.example  README.md  index.html  nginx.conf  package-lock.json  package.json
survey-employee/src/: App.tsx  api.ts  index.css  types.ts
survey-employee/src/components/: AnswerWidget.tsx  ChatView.tsx  Completion.tsx  Landing.tsx  Message.tsx
survey/backend/: __init__.py  main.py  models.py
survey/backend/services/: __init__.py  ai_service.py  chatbot.py  llm_service.py  storage.py  validator.py
survey/frontend/: streamlit_app.py
survey/tests/: test_chatbot_navigation.py  test_validator.py
