[project]
name = "survey-chatbot"
version = "0.2.0"
description = "OpenAI-powered employee survey chatbot with FastAPI and Streamlit."
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "python-dotenv==1.0.1",
    "streamlit==1.41.1",
    "requests==2.32.3",
    "openai>=1.99.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
